--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -559,9 +559,14 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.-mx-2 {
-  margin-left: -0.5rem;
-  margin-right: -0.5rem;
+.-mx-4 {
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
+
+.-mx-0 {
+  margin-left: -0px;
+  margin-right: -0px;
 }
 
 .mb-2 {
@@ -574,6 +579,10 @@ video {
 
 .mr-auto {
   margin-right: auto;
+}
+
+.-ml-4 {
+  margin-left: -1rem;
 }
 
 .flex {
@@ -628,6 +637,14 @@ video {
   width: 50%;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
+.w-11 {
+  width: 2.75rem;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -640,8 +657,8 @@ video {
   width: 100vw;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.min-w-\[568px\] {
+  min-width: 568px;
 }
 
 .max-w-\[2000px\] {
@@ -682,6 +699,14 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-2xl {
@@ -732,7 +757,7 @@ video {
   background-color: rgb(11 19 30 / var(--tw-bg-opacity));
 }
 
-.bg-primary {
+.bg-bg-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(32 43 59 / var(--tw-bg-opacity));
 }
@@ -748,10 +773,6 @@ video {
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
 }
 
 .p-6 {
@@ -789,10 +810,6 @@ video {
 
 .pt-1 {
   padding-top: 0.25rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
 }
 
 .pt-7 {
@@ -837,16 +854,6 @@ video {
   line-height: 1.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -888,6 +895,11 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
 .text-slate-600 {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
@@ -898,9 +910,9 @@ video {
   color: rgb(2 6 23 / var(--tw-text-opacity));
 }
 
-.text-slate-400 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .caret-white {
@@ -933,6 +945,20 @@ video {
   color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 
+@media (min-width: 450px) {
+  .xs\:w-1\/2 {
+    width: 50%;
+  }
+
+  .xs\:flex-row {
+    flex-direction: row;
+  }
+
+  .xs\:gap-6 {
+    gap: 1.5rem;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:h-\[300px\] {
     height: 300px;
@@ -944,6 +970,11 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:-mx-0 {
+    margin-left: -0px;
+    margin-right: -0px;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -958,6 +989,11 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:-mx-0 {
+    margin-left: -0px;
+    margin-right: -0px;
+  }
+
   .lg\:h-full {
     height: 100%;
   }
