--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -633,6 +633,10 @@ video {
   height: 100vh;
 }
 
+.h-1 {
+  height: 0.25rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -663,6 +667,10 @@ video {
 
 .max-w-\[2000px\] {
   max-width: 2000px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-row {
@@ -777,6 +785,10 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .px-1 {
@@ -923,6 +935,21 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.hover\:bg-bg:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(11 19 30 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-bg-secondary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 43 59 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-500:hover {
