--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -748,12 +748,12 @@ video {
 
 .bg-bg-light {
   --tw-bg-opacity: 1;
-  background-color: rgb(225 233 244 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-secondary-light {
+.bg-component-light {
   --tw-bg-opacity: 1;
-  background-color: rgb(195 206 223 / var(--tw-bg-opacity));
+  background-color: rgb(240 240 240 / var(--tw-bg-opacity));
 }
 
 .bg-slate-600 {
@@ -822,6 +822,11 @@ video {
   vertical-align: middle;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -837,8 +842,8 @@ video {
   line-height: 1;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
+.text-7xl {
+  font-size: 4.5rem;
   line-height: 1;
 }
 
@@ -868,6 +873,11 @@ video {
   font-weight: 600;
 }
 
+.text-accent-l {
+  --tw-text-opacity: 1;
+  color: rgb(43 49 59 / var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -888,14 +898,19 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
+.text-primary-l {
+  --tw-text-opacity: 1;
+  color: rgb(27 30 34 / var(--tw-text-opacity));
+}
+
+.text-secondary-l {
+  --tw-text-opacity: 1;
+  color: rgb(94 111 120 / var(--tw-text-opacity));
+}
+
 .text-slate-600 {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
-}
-
-.text-slate-950 {
-  --tw-text-opacity: 1;
-  color: rgb(2 6 23 / var(--tw-text-opacity));
 }
 
 .transition-colors {
@@ -939,34 +954,28 @@ video {
   background-color: rgb(11 19 30 / var(--tw-bg-opacity));
 }
 
-.dark\:bg-secondary-dark:is(.dark *) {
+.dark\:bg-component-dark:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(32 43 59 / var(--tw-bg-opacity));
 }
 
-.dark\:text-gray-300:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+.dark\:text-accent-d:is(.dark *) {
+  color: #9399a2 c4cad3 dde0e4;
 }
 
-.dark\:text-gray-400:is(.dark *) {
+.dark\:text-primary-d:is(.dark *) {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(221 224 228 / var(--tw-text-opacity));
+}
+
+.dark\:text-secondary-d:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(136 153 162 / var(--tw-text-opacity));
 }
 
 .dark\:text-slate-400:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
-.dark\:text-slate-50:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(248 250 252 / var(--tw-text-opacity));
-}
-
-.dark\:text-white:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .dark\:caret-white:is(.dark *) {
