--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -655,6 +655,10 @@ video {
   width: 100vw;
 }
 
+.w-2\/3 {
+  width: 66.666667%;
+}
+
 .min-w-\[568px\] {
   min-width: 568px;
 }
@@ -723,6 +727,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -775,6 +783,75 @@ video {
 
 .bg-transparent {
   background-color: transparent;
+}
+
+.bg-accent-l {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 49 59 / var(--tw-bg-opacity));
+}
+
+.bg-accent-d {
+  background-color: #9399a2 c4cad3 dde0e4;
+}
+
+.bg-bg-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(11 19 30 / var(--tw-bg-opacity));
+}
+
+.bg-secondary-d {
+  --tw-bg-opacity: 1;
+  background-color: rgb(136 153 162 / var(--tw-bg-opacity));
+}
+
+.bg-secondary-l {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 111 120 / var(--tw-bg-opacity));
+}
+
+.bg-primary-l {
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 30 34 / var(--tw-bg-opacity));
+}
+
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -925,6 +1002,12 @@ video {
   color: rgb(2 6 23 / var(--tw-text-opacity));
 }
 
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .transition-colors {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -969,6 +1052,15 @@ video {
 .dark\:bg-component-dark:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(32 43 59 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-accent-d:is(.dark *) {
+  background-color: #9399a2 c4cad3 dde0e4;
+}
+
+.dark\:bg-accent-l:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 49 59 / var(--tw-bg-opacity));
 }
 
 .dark\:text-primary-d:is(.dark *) {
@@ -1040,6 +1132,10 @@ video {
 
   .md\:w-\[70px\] {
     width: 70px;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 }
 
