--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,42 +1,15 @@
-.loader {
-    display: flex;
-    justify-content: center;
+.spinner {
+    animation: rotation 0.75s linear infinite;
 }
 
-.bar {
-    width: 7px;
-    height: 18px;
-    margin: 0 9px;
-    border-radius: 10px;
-    animation: loading_5192 1s ease-in-out infinite;
+.path {
+    stroke-dasharray: 100;
+    stroke-dashoffset: 20;
+    stroke-linecap: round;
 }
 
-.bar:nth-child(1) {
-    animation-delay: 0.01s;
-}
-
-.bar:nth-child(2) {
-    animation-delay: 0.09s;
-}
-
-.bar:nth-child(3) {
-    animation-delay: 0.19s;
-}
-
-.bar:nth-child(4) {
-    animation-delay: 0.29s;
-}
-
-@keyframes loading_5192 {
-    0% {
-        transform: scale(1);
-    }
-
-    20% {
-        transform: scale(1, 2.5);
-    }
-
-    40% {
-        transform: scale(1);
+@keyframes rotation {
+    to {
+        transform: rotate(360deg);
     }
 }
