--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -558,6 +558,10 @@ video {
   position: fixed;
 }
 
+.relative {
+  position: relative;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -648,6 +652,10 @@ video {
   height: 100vh;
 }
 
+.h-\[150px\] {
+  height: 150px;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -682,6 +690,26 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[10px\] {
+  width: 10px;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
+.w-\[250px\] {
+  width: 250px;
 }
 
 .min-w-\[568px\] {
@@ -760,6 +788,14 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .border {
