--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -586,6 +586,10 @@ video {
   z-index: 30;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -660,6 +664,10 @@ video {
   height: 100vh;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .min-h-\[100px\] {
   min-height: 100px;
 }
@@ -706,6 +714,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .min-w-\[568px\] {
